--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body {
 /*header section*/
 .hero_area {
   height: 100vh;
-  background-image: url(../images/hero-bg.jpg);
+  background-color: #DAD8E9;
   background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -107,7 +107,7 @@ body {
 }
 
 .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item.active .nav-link, .custom_nav-container.navbar-expand-lg .navbar-nav .nav-item:hover .nav-link {
-  color: #e7d619;
+  color: #f5a9ee;
 }
 
 a,
@@ -333,7 +333,7 @@ a:focus {
 .slider_section .detail-box {
   margin: 45px 5% 0 5%;
   padding-bottom: 45px;
-  border-right: 2px solid #e7d619;
+  border-right: 2px solid #f5a9ee;
 }
 
 .slider_section .detail-box h1 {
@@ -345,7 +345,7 @@ a:focus {
 }
 
 .slider_section .detail-box h1 span {
-  color: #e7d619;
+  color: #f5a9ee;
 }
 
 .slider_section .detail-box .btn-box {
@@ -382,17 +382,17 @@ a:focus {
 .slider_section .detail-box .btn-box .btn-2 {
   display: inline-block;
   padding: 10px 0px;
-  background-color: #e7d619;
+  background-color: #f5a9ee;
   color: #ffffff;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  border: 1px solid #e7d619;
+  border: 1px solid #f5a9ee;
   border-radius: 0;
 }
 
 .slider_section .detail-box .btn-box .btn-2:hover {
   background-color: transparent;
-  color: #e7d619;
+  color: #f5a9ee;
 }
 
 .slider_section .img-box img {
@@ -414,7 +414,7 @@ a:focus {
   height: 12px;
   opacity: 1;
   background: none;
-  border: 2px solid #e7d619;
+  border: 2px solid #f5a9ee;
   color: #000000;
   position: relative;
   margin: 0 4px;
@@ -433,7 +433,7 @@ a:focus {
   top: 3.5px;
   width: 1.5px;
   height: 17px;
-  background-color: #e7d619;
+  background-color: #f5a9ee;
   border-radius: 5px;
   -webkit-transform: rotate(25deg);
           transform: rotate(25deg);
@@ -478,7 +478,7 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #e7d619;
+  color: #f5a9ee;
   text-transform: uppercase;
 }
 
@@ -486,13 +486,13 @@ a:focus {
   margin-left: 5px;
 }
 
-.animal_section {
-  background-color: #1A1055;
+.food_section {
+  background-color: #DAD8E9;
   background-size: cover;
-  color: #ffffff;
+  color: #0a2050;
 }
 
-.animal_section .animal_container {
+.food_section .food_container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -503,7 +503,7 @@ a:focus {
           justify-content: center;
 }
 
-.animal_section .animal_container .box {
+.food_section .food_container .box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -520,31 +520,31 @@ a:focus {
       flex-basis: 20%;
 }
 
-.animal_section .animal_container .box .img-box {
+.food_section .food_container .box .img-box {
   border-radius: 25px;
   overflow: hidden;
   -webkit-box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
           box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
 }
 
-.animal_section .animal_container .box .img-box img {
+.food_section .food_container .box .img-box img {
   width: 100%;
 }
 
-.animal_section .animal_container .box .detail-box {
+.food_section .food_container .box .detail-box {
   margin-top: 15px;
 }
 
-.animal_section .animal_container .box .detail-box h5 {
+.food_section .food_container .box .detail-box h5 {
   font-weight: bold;
 }
 
-.animal_section .animal_container .box.b1 {
+.food_section .food_container .box.b1 {
   -webkit-animation: odd-box-animate 3s infinite;
           animation: odd-box-animate 3s infinite;
 }
 
-.animal_section .animal_container .box.b2 {
+.food_section .food_container .box.b2 {
   -webkit-animation: even-box-animate 3s infinite;
           animation: even-box-animate 3s infinite;
 }
@@ -657,7 +657,7 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #e7d619;
+  color: #f5a9ee;
   text-transform: uppercase;
 }
 
@@ -665,278 +665,6 @@ a:focus {
   margin-left: 5px;
 }
 
-.us_section .us_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  position: relative;
-}
-
-.us_section .us_container .box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.us_section .us_container .box img {
-  max-width: 100%;
-}
-
-.us_section .us_container .box .img1-box {
-  height: 300px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.us_section .us_container .box .img2-box {
-  width: 175px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.us_section .us_container .box .detail-box {
-  margin-top: 15px;
-}
-
-.us_section .us_container .box .detail-box h6 {
-  text-transform: uppercase;
-  font-weight: bold;
-  color: #0e0e0e;
-}
-
-.us_section .us_container::before {
-  content: "";
-  position: absolute;
-  bottom: 25.2%;
-  left: 50%;
-  width: 80%;
-  height: 1.5px;
-  background-image: -webkit-gradient(linear, left top, right top, color-stop(50%, transparent), color-stop(50%, #e7d619));
-  background-image: linear-gradient(to right, transparent 50%, #e7d619 50%);
-  background-size: 20px 100%;
-  z-index: -1;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
-  -webkit-animation: border-dance 4s infinite linear;
-          animation: border-dance 4s infinite linear;
-}
-
-@-webkit-keyframes border-dance {
-  0% {
-    background-position: 0px 0px;
-  }
-  100% {
-    background-position: 300px 0px;
-  }
-}
-
-@keyframes border-dance {
-  0% {
-    background-position: 0px 0px;
-  }
-  100% {
-    background-position: 300px 0px;
-  }
-}
-
-.us_section .btn-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-top: 55px;
-}
-
-.us_section .btn-box a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #e7d619;
-  text-transform: uppercase;
-}
-
-.us_section .btn-box a img {
-  margin-left: 5px;
-}
-
-.food_section {
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(60%, #0a2050), color-stop(60%, transparent));
-  background: linear-gradient(to bottom, #0a2050 60%, transparent 60%);
-}
-
-.food_section .heading_container {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  color: #ffffff;
-}
-
-.food_section .food_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-
-.food_section .food_container .box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  text-align: center;
-  margin: 45px 20px 0 20px;
-}
-
-.food_section .food_container .box .img-box img {
-  max-width: 100%;
-}
-
-.food_section .food_container .box .detail-box {
-  margin-top: 15px;
-}
-
-.food_section .food_container .box .detail-box h6 {
-  color: #e7d619;
-  text-transform: uppercase;
-}
-
-.food_section .food_container .box .detail-box h3 {
-  font-weight: bold;
-  color: #e7d619;
-}
-
-.food_section .food_container .box .detail-box h3 span {
-  color: #0a2050;
-}
-
-.food_section .food_container .box .detail-box a {
-  display: inline-block;
-  padding: 8px 45px;
-  background-color: #0a2050;
-  color: #e7d619;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  border: 1px solid #0a2050;
-  border-radius: 0;
-  margin-top: 15px;
-}
-
-.food_section .food_container .box .detail-box a:hover {
-  background-color: transparent;
-  color: #0a2050;
-}
-
-.client_section {
-  background-image: url(../images/client-bg.jpg);
-  background-size: cover;
-}
-
-.client_section #carouselExampleControls {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.client_section .box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 75px;
-}
-
-.client_section .box .img-box {
-  margin-right: 25px;
-  min-width: 250px;
-}
-
-.client_section .box .img-box img {
-  width: 100%;
-}
-
-.client_section .box .detail-box h4 {
-  text-transform: uppercase;
-  font-size: 24px;
-}
-
-.client_section .box .detail-box img {
-  width: 25px;
-}
-
-.client_section .carousel_btn-box {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.client_section .carousel_btn-box .carousel-control-prev,
-.client_section .carousel_btn-box .carousel-control-next {
-  position: unset;
-  width: 45px;
-  height: 45px;
-  background-color: #e7d619;
-  opacity: 1;
-  border-radius: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  margin: 0 3px;
-}
-
-.client_section .carousel_btn-box .carousel-control-prev:hover,
-.client_section .carousel_btn-box .carousel-control-next:hover {
-  background-color: #000000;
-}
-
-.client_section .carousel_btn-box .carousel-control-prev {
-  background-image: url(../images/prev.png);
-}
-
-.client_section .carousel_btn-box .carousel-control-next {
-  background-image: url(../images/next.png);
-}
 
 .contact_section {
   position: relative;
@@ -984,11 +712,11 @@ a:focus {
 .contact_section button {
   display: inline-block;
   padding: 10px 45px;
-  background-color: #e7d619;
+  background-color: #f5a9ee;
   color: #ffffff;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  border: 1px solid #e7d619;
+  border: 1px solid #f5a9ee;
   border-radius: 0;
   color: #fff;
   margin-top: 35px;
@@ -996,7 +724,7 @@ a:focus {
 
 .contact_section button:hover {
   background-color: transparent;
-  color: #e7d619;
+  color: #f5a9ee;
 }
 
 .contact_section .map_container {
@@ -1009,119 +737,3 @@ a:focus {
 .contact_section .map_container .map-responsive {
   height: 100%;
 }
-
-.info_section {
-  background-color: #0a2050;
-  color: #ffffff;
-  padding: 40px 0 75px 0;
-  font-family: "Open Sans",
- sans-serif;
-}
-
-.info_section .row > div {
-  margin-top: 35px;
-}
-
-.info_section h5 {
-  text-transform: uppercase;
-  margin-bottom: 25px;
-}
-
-.info_time p {
-  text-transform: uppercase;
-}
-
-.info_form input {
-  width: 100%;
-  border: none;
-  height: 40px;
-  margin-bottom: 10px;
-  padding-left: 25px;
-  background-color: #eaeaea;
-  outline: none;
-  color: #101010;
-}
-
-.info_form button {
-  width: 100%;
-  outline: none;
-  border: none;
-  color: #fff;
-  text-transform: uppercase;
-  display: inline-block;
-  padding: 4px 45px;
-  background-color: #e7d619;
-  color: #0a2050;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  border: 1px solid #e7d619;
-  border-radius: 0;
-}
-
-.info_form button:hover {
-  background-color: transparent;
-  color: #e7d619;
-}
-
-.info_social .social_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.info_social .social_container a {
-  margin: 0 5px;
-}
-
-.info_social .social_container a img {
-  width: 35px;
-}
-
-.info_contact > div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 10px 0;
-}
-
-.info_contact > div img {
-  height: auto;
-  margin-right: 12px;
-}
-
-.info_contact > div p {
-  margin: 0;
-}
-
-/* footer section*/
-.footer_section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  background-color: #e7d619;
-}
-
-.footer_section p {
-  color: #ffffff;
-  margin: 0;
-  padding: 25px 0 20px 0;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.footer_section a {
-  color: #ffffff;
-}
-
-/* end footer section*/
-/*# sourceMappingURL=style.css.map */
