--- a/css/style.css
+++ b/css/style.css
@@ -549,6 +549,8 @@ a:focus {
           animation: even-box-animate 3s infinite;
 }
 
+
+
 @-webkit-keyframes odd-box-animate {
   0% {
     -webkit-transform: translateY(45px);
@@ -736,4 +738,91 @@ a:focus {
 
 .contact_section .map_container .map-responsive {
   height: 100%;
+}
+
+.restaurant_section .grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 1000px;
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+}
+
+.restaurant_section .grid-item {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+.restaurant_section .grid-item:hover {
+  transform: scale(1.05);
+}
+
+.restaurant_section .grid-item img {
+  max-width: 100%;
+  border-radius: 10px;
+  margin-bottom: 10px; 
+}
+
+.highlights_section {
+  background-color: #DAD8E9;
+  background-size: cover;
+  color: #0a2050;
+}
+
+.highlights_section .highlights_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.highlights_section .highlights_container .box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  margin: 45px 2.5%;
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
+}
+
+.highlights_section .highlights_container .box .img-box {
+  border-radius: 25px;
+  overflow: hidden;
+  -webkit-box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+}
+
+.highlights_section .highlights_container .box .img-box img {
+  width: 100%;
+}
+
+.highlights_section .highlights_container .box .detail-box {
+  margin-top: 15px;
+}
+
+.highlights_section .highlights_container .box .detail-box h5 {
+  font-weight: bold;
 }
