--- a/css/style.css
+++ b/css/style.css
@@ -909,3 +909,77 @@ a:focus {
   justify-content: center;
   margin: 20px; /* Adjust margin as needed */
 }
+
+
+
+.image-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-right: 60px; 
+}
+
+.image-section img {
+  width: 300px; /* Adjust width as needed */
+  border-radius: 15px; /* Rounds the corners of the image */
+  margin-bottom: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.color-palette {
+  margin-top: 10px;
+  display: flex;
+  gap: 5px;
+}
+.color-palette div {
+  width: 50px;
+  height: 50px;
+  border-radius: 5px;
+}
+.rating-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align ratings to the left */
+}
+
+.rating-section h2 {
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
+.ratings {
+  width: 300px; /* Adjust width to match the image width */
+}
+
+.rating-bar {
+  width: 100%;
+  height: 30px;
+  background-color: #e0e0e0;
+  border-radius: 5px;
+  margin: 10px 0;
+  position: relative;
+}
+
+.rating-bar span {
+  display: block;
+  height: 100%;
+  background-color: #4caf50;
+  border-radius: 5px;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.more-info {
+  padding: 20px;
+  background: #fff;
+  border-radius: 10px;
+  margin-top: 20px;
+  text-align: center; /* Center align the text */
+}
+
+.specificFood {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 20px;
+}
