--- a/css/style.css
+++ b/css/style.css
@@ -838,6 +838,7 @@ a:focus {
   justify-content: center;
   align-items: center;
   height: 20vh; /* Full viewport height */
+  margin-bottom: 30px;
 }
 
 .logo_image img {
@@ -860,11 +861,9 @@ a:focus {
   margin: 25px 0;
   font-size: 0.9em;
   font-family: sans-serif;
-  min-width: 400px;
+  width: 600px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-  width: 80%;
   border-spacing: 0;
-  max-width: 600px;
   border-radius: 10px;
   overflow: hidden;
 }
@@ -1286,7 +1285,18 @@ a:focus {
 
 /* Style the tab content */
 .tabcontent {
-  display: none;
+  display: none; /* Hidden by default */
+  padding: 20px; /* Some padding */
+  margin: 0 auto; /* Center the container */
+  max-width: 100%; /* Optional: limit the width */
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  
 }
 
 .overview-tab {
@@ -1344,4 +1354,27 @@ a:focus {
 .author-name {
   font-weight: bold;
   font-size: 1em;
+}
+
+.background-section {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.background-section h1 {
+  font-size: 2em;
+  margin-bottom: 15px;
+  color: #e74c3c; /* Wendy's red color */
+  text-align: center;
+}
+
+.background-section p {
+  font-size: 1em;
+  line-height: 1.6;
+  text-align: justify;
+  margin: 0;
 }
