--- a/css/style.css
+++ b/css/style.css
@@ -1384,3 +1384,22 @@ a:focus {
   text-align: justify;
   margin: 0;
 }
+
+.blog_section .img-box {
+  width: 350px; 
+  height: 200px; 
+  overflow: hidden;
+  margin-bottom: 15px;
+  transition: transform 0.2s;
+}
+
+.blog_section .img-box img {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+  border-radius: 15px; 
+}
+
+.blog_section .img-box:hover {
+  transform: translateY(-5px);
+}
