--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,7 @@ a:focus {
           transform: rotate(-45deg) translateY(-16px);
 }
 
+
 .overlay {
   height: 100%;
   width: 0;
@@ -1075,7 +1076,7 @@ a:focus {
 }
 
 .average-score {
-  justify: center;
+  justify-content: center;
   text-align: center;
   font-size: 1.5em;
   font-weight: bold;
@@ -1390,7 +1391,9 @@ a:focus {
   height: 200px; 
   overflow: hidden;
   margin-bottom: 15px;
+  margin-top: 20px;
   transition: transform 0.2s;
+  cursor: pointer;
 }
 
 .blog_section .img-box img {
@@ -1402,4 +1405,107 @@ a:focus {
 
 .blog_section .img-box:hover {
   transform: translateY(-5px);
+}
+
+.blog_box h5 {
+  font-size: 20px;
+  font-weight: normal;
+  transition: font-weight 0.3s, text-decoration 0.3s;
+  margin-top: 10px; /* Add space between image and title */
+  font-weight: bold;
+  cursor: pointer;
+  color: #000000;
+}
+
+.blog_box h5:hover {
+  text-decoration: underline;
+}
+
+.heading_container h2 {
+  font-weight: normal;
+  transition: font-weight 0.3s, text-decoration 0.3s;
+  margin-top: 10px; /* Add space between image and title */
+  font-weight: bold;
+  cursor: pointer;
+  color: #000000;
+}
+
+.heading_container h2:hover {
+  text-decoration: underline;
+}
+
+.detail-box a {
+  color: #0a2050;  /* Default color for the link */
+  text-decoration: none; /* Remove underline from links */
+  transition: color 0.3s, text-decoration 0.3s; /* Smooth transition for hover effects */
+}
+
+.heading_container {
+  margin-bottom:-20px;
+}
+
+.blog_box .detail-box .date {
+  font-size: 0.9rem;
+  color: #777;
+  margin-bottom: 10px;
+}
+
+.post-date {
+  font-size: 0.9rem;
+  color: #777;
+  text-align: right; /* Right-aligns text within its container */
+}
+
+.blog-post-content {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: #333;
+}
+
+.blog-post h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 20px;      
+}
+
+.blog-post {
+  padding: 20px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.blog-post img.cover-image {
+  width: 100%;
+  height: 500px; /* Adjust as needed */
+
+  display: block;
+  margin-bottom: 20px;
+  border-radius: 15px; /* Adjust the radius as needed for rounded corners */
+  object-fit: cover; /* Ensures the image covers the area without stretching */
+}
+
+.author-section {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Distributes space between items */
+  margin-bottom: 20px;
+}
+
+.author-info {
+  display: flex;
+  align-items: center;
+}
+
+.author-section .author-photo {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+.author-section .author-name {
+  font-size: 1rem;
+  font-weight: bold;
+  color: #555;
 }
