--- a/css/style.css
+++ b/css/style.css
@@ -1581,3 +1581,31 @@ a:focus {
   background-color: #1b3a7a; /* Darker blue on hover */
   color: #ffffff; /* Ensure text color remains readable */
 }
+
+.food_section .highlights_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.food_section .highlights_container .box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  margin: 45px 2.5%;
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
+}
