--- a/css/style.css
+++ b/css/style.css
@@ -1516,12 +1516,13 @@ a:focus {
 
 .blog-post img.cover-image {
   width: 100%;
-  height: 550px; /* Adjust as needed */
+  height: 500px; 
 
   display: block;
   margin-bottom: 20px;
-  border-radius: 15px; /* Adjust the radius as needed for rounded corners */
-  object-fit: cover; /* Ensures the image covers the area without stretching */
+  border-radius: 15px;
+  object-fit: cover; 
+  object-position: center;
 }
 
 .author-section {
