--- a/css/style.css
+++ b/css/style.css
@@ -1505,12 +1505,12 @@ a:focus {
 
 .blog-post img.cover-image {
   width: 100%;
-  height: 520px; 
+  height: 500px; 
 
   display: block;
   margin-bottom: 20px;
   border-radius: 15px;
-  object-position: center;
+  object-position: center center;
   object-fit: cover; 
   transition: transform 0.2s;
 }
