--- a/css/style.css
+++ b/css/style.css
@@ -1478,6 +1478,17 @@ a:focus {
   margin-bottom: 10px;
 }
 
+.blog_box {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
+}
+
+.blog_box.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 .post-date {
   font-size: 0.9rem;
   color: #777;
