--- a/css/style.css
+++ b/css/style.css
@@ -1426,8 +1426,9 @@ a:focus {
 
 .blog_section .img-box img {
   width: 100%; 
-  height: 100%; 
+  height: 200px; 
   object-fit: cover; 
+  object-position: center center;
   border-radius: 15px; 
 }
 
