--- a/css/style.css
+++ b/css/style.css
@@ -1422,6 +1422,7 @@ a:focus {
   margin-top: 20px;
   transition: transform 1s;
   cursor: pointer;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .blog_section .img-box img {
