shadow and rounded corners

--- a/css/style.css
+++ b/css/style.css
@@ -1423,6 +1423,7 @@ a:focus {
   transition: transform 1s;
   cursor: pointer;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
 }
 
 .blog_section .img-box img {
@@ -1525,6 +1526,8 @@ a:focus {
   object-position: center center;
   object-fit: cover; 
   transition: transform 0.2s;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .blog-post img.cover-image:hover {
