--- a/css/style.css
+++ b/css/style.css
@@ -1432,7 +1432,7 @@ a:focus {
 .blog_section .img-box img {
   width: 100%;
   max-height: 100%;
-  object-fit: contain; 
+  object-fit: cover; 
   object-position: center center;
 }
 
