--- a/css/style.css
+++ b/css/style.css
@@ -1415,7 +1415,7 @@ a:focus {
 }
 
 .blog_section .img-box {
-  width: 350px; 
+  width: 30%; 
   height: 300px; 
   overflow: hidden;
   margin-bottom: 15px;
