--- a/css/style.css
+++ b/css/style.css
@@ -1523,7 +1523,7 @@ a:focus {
   width: 100%;
   height: 500px; 
 
-  display: block;
+  display: flex;
   margin-bottom: 20px;
   border-radius: 15px;
   object-position: center center;
