--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ body {
   font-weight: bold;
 }
 
-/*header section*/
 .hero_area {
   height: 100vh;
   background-color: #DAD8E9;
@@ -323,8 +322,7 @@ a:focus {
   opacity: 1;
 }
 
-/*end header section*/
-/* slider section */
+
 .slider_section {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -722,20 +720,19 @@ a:focus {
   height: 200px;
 }
 
-/* General styling for textarea within contact_section */
 .contact_section textarea {
-  width: 100%; /* Full width or adjust as needed */
-  height: 50px; /* Adjust height as needed */
-  padding: 10px; /* Add some padding */
-  border: 1px solid #ccc; /* Border styling */
-  border-radius: 4px; /* Rounded corners */
-  box-sizing: border-box; /* Include padding and border in element's total width */
-  background-color: #ebebeb; /* Background color */
-  color: #101010; /* Text color */
-  outline: none; /* Remove default outline */
-  margin-bottom: 25px; /* Space below textarea */
-  resize: vertical; /* Allow vertical resizing */
-  overflow: auto; /* Show scrollbars if needed */
+  width: 100%; 
+  height: 50px; 
+  padding: 10px; 
+  border: 1px solid #ccc; 
+  border-radius: 4px; 
+  box-sizing: border-box;
+  background-color: #ebebeb;
+  color: #101010; 
+  outline: none;
+  margin-bottom: 25px; 
+  resize: vertical; 
+  overflow: auto;
 }
 
 .contact_section textarea::placeholder {
@@ -872,7 +869,7 @@ a:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 20vh; /* Full viewport height */
+  height: 20vh; 
   margin-bottom: 30px;
 }
 
@@ -934,28 +931,28 @@ a:focus {
 
 .styled-table th:nth-child(1),
         .styled-table td:nth-child(1) {
-            width: 60%; /* Width for the first column */
+            width: 60%; 
         }
 
         .styled-table th:nth-child(2),
         .styled-table td:nth-child(2) {
-            width: 15%; /* Width for the second column */
+            width: 15%;
         }
 
         .styled-table th:nth-child(3),
         .styled-table td:nth-child(3) {
-            width: 10%; /* Width for the third column */
+            width: 10%; 
         }
 
         .styled-table th:nth-child(4),
         .styled-table td:nth-child(4) {
-            width: 15%; /* Width for the third column */
+            width: 15%; 
         }
 
 .food_table {
   display: flex;
   justify-content: center;
-  margin: 20px; /* Adjust margin as needed */
+  margin: 20px;
 }
 
 .food_table tr {
@@ -1425,8 +1422,8 @@ a:focus {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   display: flex;
-  justify-content: center; /* Horizontal centering */
-  align-items: center; /* Vertical centering */
+  justify-content: center; 
+  align-items: center;
 }
 
 .blog_section .img-box img {
@@ -1529,11 +1526,10 @@ a:focus {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   display: flex;
-  justify-content: center; /* Horizontal centering */
+  justify-content: center;
   align-items: center;
 }
 
-/* Image styling */
 .cover-image {
   width: 100%;
   max-height: 100%;
