--- a/css/style.css
+++ b/css/style.css
@@ -913,6 +913,7 @@ a:focus {
 
 .styled-table tbody tr {
   border-bottom: 1px solid #dddddd;
+  transition: 0.2s;
 }
 
 .styled-table tr:nth-child(even) {
